--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="./static/images/Logo/logoGDD_C.png" class="h-12 w-24" alt="Flowbite Logo">
                     <!-- <span class="self-center italic text-blue-400 text-4xl font-bold whitespace-nowrap dark:text-white">DGCS</span> -->
                 </a>
-                <div class="flex md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
+                <div class="flex md:order-2 space-x-2 md:space-x-0 rtl:space-x-reverse">
                     <a href="https://wa.me/22994198434" class="text-white flex items-center justify-center gap-2 bg-blue-900 hover:bg-blue-900 focus:ring-4 focus:outline-none focus:ring-blue-900 font-medium rounded-lg text-xs px-2 py-3 text-center dark:bg-blue-900 dark:hover:bg-blue-900 dark:focus:ring-blue-900">
                         Nous-Contactez
                         <img src="./static/images/navmembre/whatsapp.png" class="w-6 h-6" alt="">
@@ -179,7 +179,7 @@
                         <path d="M12 2l7 4v8c0 3.1-1.3 6-4 7.4-2.7-1.4-4-4.3-4-7.4V6L5 10v4.8c-1.6-1.2-2-3-2-4.8V6l7-4zm1 15c.5 1.2 1.5 2 3 2s2.5-.8 3-2l-6 0zm2-7v-2h2v2h2l-3 3-3-3h2zm-2-6l3-3 3 3h-2v2h-2V4h-2z"/>
                     </svg>
                     <div class="flex flex-col gap-1">
-                        <h2 class="font-medium text-lg">Gestion des Inventaires de Stocks</h2>
+                        <h2 class="font-medium text-lg">Gestion d'Inventaires et Stocks</h2>
                         <div class="flex items-start justify-start w-full mb-4">
                             <hr class="w-14 h-1 bg-gray-200 border-0 rounded dark:bg-gray-700">
                         </div>
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </div>
-        <div class="p-8 gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 ">
+        <div class="p-8 gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4">
         </div>
     </section>
     
