modif index.html

--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
     
    <section id="notreequipe" class="bg-blue-50 relative bg-blend-multiply">
     <!-- <img src="../static/images/NotreEquipe/department.png" alt="Conference Image" class="absolute inset-0 w-full h-full object-cover opacity-50"> -->
-        <div class="flex items-center p-4 justify-center w-full mb-4">
+        <div class="flex items-center p-4 justify-center w-full">
             <hr class="w-16 h-1 bg-blue-900 border-0 rounded dark:bg-gray-700">
             <span class="px-2 text-black text-3xl ml-2 bg-blue-50">
                 <span class="text-yellow-400 font-bold">N</span>otre <span class="text-yellow-400 font-bold">E</span>quipe
             </span>
         </div>
-        <div class=" border border-blue-100 p-8 gap-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 ">
+        <div class="border border-blue-100 p-4 gap-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 ">
             <div class="scroll-fade-in animated-image shadow-md w-full flex items-center justify-center p-4 rounded-lg bg-white">
                 <div class="flex flex-wrap gap-4">
                     <img class="w-60 h-40 object-cover scroll-fade-in mb-3 p-1 rounded-full ring-2 ring-gray-300 dark:ring-gray-500 shadow-md" src="./static/images/NotreEquipe/samuel.png" alt="Bonnie image"/>
