modif index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </span>
         </div>
         
-        <p class="zoom-in scroll-fade-in m-4 text-xl text-center text-gray-600">Découvrez ici quelques unes de nos services</p>
+        <p class="zoom-in scroll-fade-in m-2 text-xl text-center text-gray-600">Découvrez ici quelques unes de nos services</p>
         <div class="p-2 gap-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 ">
             <div class="scroll-fade-in animated-image shadow-md w-full flex items-center justify-center p-8 bg-white">
                 <div class="flex flex-col gap-2">
@@ -221,7 +221,7 @@
 
     <div class="h-16 lg:h-24"></div>
 
-    <section id="notremission" class="zoom-in bg-blue-50 p-8 mx-auto mt-4 px-4">
+    <section id="notremission" class="zoom-in bg-blue-50 p-2 mx-auto mt-4 ">
         <div class="mb-4 flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-8">
             <blockquote class="mb-3 w-full md:w-1/2 p-4 my-4 bg-blue-50 border-l-4 border-blue-700 dark:bg-gray-800 rounded-lg">
                 <div class="flex items-center justify-center w-full mb-4">
@@ -292,9 +292,9 @@
     <div class="h-16 lg:h-24"></div>
 
     
-   <section id="notreequipe" class="bg-blue-50 relative bg-blend-multiply">
+   <section id="notreequipe" class="py-8 bg-blue-50 relative bg-blend-multiply">
     <!-- <img src="../static/images/NotreEquipe/department.png" alt="Conference Image" class="absolute inset-0 w-full h-full object-cover opacity-50"> -->
-        <div class="flex items-center p-4 justify-center w-full">
+        <div class="flex items-center justify-center w-full py-3 mb-4">
             <hr class="w-16 h-1 bg-blue-900 border-0 rounded dark:bg-gray-700">
             <span class="px-2 text-black text-3xl ml-2 bg-blue-50">
                 <span class="text-yellow-400 font-bold">N</span>otre <span class="text-yellow-400 font-bold">E</span>quipe
