modif index.html

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     </section>
     
     <section>
-        <footer class="bg-blue-900 rounded-lg dark:bg-gray-500">
+        <footer class="bg-blue-900 dark:bg-gray-500">
             <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
                 <div class="sm:flex sm:items-center sm:justify-between">
                     <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
