--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="./static/images/carousel/4.jpg" alt="Conference Image" class="absolute inset-0 w-full h-full object-cover opacity-50">
         <div class="relative z-10 px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56 section-content">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">Bienvenue sur GDD CONSULTING</h1>
-            <p class="mb-8 text-2xl font-normal text-gray-300">( Gloire de Dieu Consulting. )</p>
+            <p class="mb-8 text-xl font-normal text-gray-300">( Gloire de Dieu Consulting. )</p>
             <!-- <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
                 <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-400 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">Commencer
                     <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
